; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_ltls.c__check_sslctx.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_ltls.c__check_sslctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssl_ctx = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"need sslctx\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ssl_ctx* (i32*, i32)* @_check_sslctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ssl_ctx* @_check_sslctx(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ssl_ctx*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @lua_touserdata(i32* %6, i32 %7)
  %9 = inttoptr i64 %8 to %struct.ssl_ctx*
  store %struct.ssl_ctx* %9, %struct.ssl_ctx** %5, align 8
  %10 = load %struct.ssl_ctx*, %struct.ssl_ctx** %5, align 8
  %11 = icmp ne %struct.ssl_ctx* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @luaL_error(i32* %13, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %12, %2
  %16 = load %struct.ssl_ctx*, %struct.ssl_ctx** %5, align 8
  ret %struct.ssl_ctx* %16
}

declare dso_local i64 @lua_touserdata(i32*, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
